--- a/vignettes/mCP_tutorial_Humans_samples.Rmd
+++ b/vignettes/mCP_tutorial_Humans_samples.Rmd
@@ -92,6 +92,7 @@ out_Hek_P2_1_teste <- mCP(corum_database = Corum_Humans_Database,
                           filter = 0.93,
                           heat_map = TRUE,
                           relative = FALSE,
+                          fdr_limit = 0.05,
                           n_simulations= 9,
                           display_weights = TRUE,
                           standard_weights = list(list(x =11, label= "1049KDa"), 
