--- a/vignettes/mCP_tutorial_Mouse_samples.Rmd
+++ b/vignettes/mCP_tutorial_Mouse_samples.Rmd
@@ -14,7 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
+```{r pressure3xx, eval=FALSE, include=FALSE}
+knitr::opts_chunk$set(eval = FALSE, include = FALSE)
 library(mCP)
 ```
 
@@ -91,7 +92,7 @@ library(mCP)
 
 Run these libraries:
 
-```{r pressure3, eval=FALSE, include=FALSE}
+```{r pressure333, eval=FALSE, include=FALSE}
 library(dplyr)
 library(readr)
 library(ggplot2)
