--- a/vignettes/mCP_tutorial_Humans_samples.Rmd
+++ b/vignettes/mCP_tutorial_Humans_samples.Rmd
@@ -23,7 +23,10 @@ This vignette provides a step-by-step guide to using the `mCP` package to analyz
 We provide a processing with "hsapiens" dataset Hek293 processed by BNE page of 35 fractions. We explain in the last section how to run an extra function that will be very useful for getting the input matrix as the average of the replicates in the experiment. All functions have different options, therefore 
 we provide a detailed explanation about the functions at the end of this tutorial.
 
-![eIF3 complex](https://user-images.githubusercontent.com/82643524/236702932-d61f9ccd-cf1f-442f-8a4a-719495b381e0.png)
+
+![Rplot02](https://github.com/hugoagno3/TEST/assets/82643524/c77a3cae-0da6-4636-9939-2dc0b5cf47b8)
+
+
 ![heat eIF3 complex](https://user-images.githubusercontent.com/82643524/236703288-735a5d6e-25aa-49b9-8520-071a3df7ea4c.png)
 ![Eif3j heatmap](https://user-images.githubusercontent.com/82643524/236703265-8cd3be1e-4252-4878-8f91-58481916cb84.png)
 
@@ -110,6 +113,7 @@ mCP_Hek_P2_1 <- mCP(corum_database = Corum_Humans_Database,
                           monomeric_filter = FALSE,
                           Risk_fraction = 31,
                           set_seed = TRUE,
+                          mw = TRUE,
                           display_weights = TRUE,
                           standard_weights = list(list(x =6, label= "2700 KDa"), 
                                                           list(x = 11, label ="950 KDa"),
@@ -196,6 +200,7 @@ Note that if you wish to have the plots of this last FDR protein complexes  you 
                             N_fractions = 35,
                             heat_map = TRUE,
                             relative = FALSE,
+                            mw = TRUE,
                             display_weights = TRUE,
                             standard_weights = list(list(x =6, label= "2700 KDa"), 
                                                           list(x = 11, label ="950 KDa"),
