change heatmap_seaborn by network, added try to ccp_plotter function. and Updated vignettes with Network instead of heatmap_seaborn

--- a/vignettes/mCP_tutorial_Mouse_samples.Rmd
+++ b/vignettes/mCP_tutorial_Mouse_samples.Rmd
@@ -117,7 +117,7 @@ PPC_CM_LV<- mCP(corum_database = Corum_Mouse_Database,
                                        N_fractions = 35, 
                                        specie = "mmusculus",
                                        method_cor = "pearson",
-                                       heatmap_seaborn = TRUE,
+                                       network = TRUE,
                                        format = "pdf", 
                                        output_name = "CM_LV",
                                        filter = 0.93,
@@ -147,7 +147,7 @@ PPC_CM_RV<- mCP(corum_database = Corum_Mouse_Database,
                                        N_fractions = 35, 
                                        specie = "mmusculus",
                                        method_cor = "pearson",
-                                       heatmap_seaborn = TRUE,
+                                       network = TRUE,
                                        format = "pdf", 
                                        output_name = "CM_RV_1",
                                        filter = 0.93,
@@ -207,7 +207,7 @@ CL_hek_P2_1<- mcp_list(corum_database =  Corum_Humans_Database,
                        N_fractions = 35, 
                        specie = "hsapiens",
                        method_cor = "pearson",
-                       heatmap_seaborn = TRUE)
+                       network = TRUE)
 ##### Run the output of mcp_list into the cpp_ploter function. 
 out_Hek_P2_1 <- cpp_plotter(complex_list = CL_hek_P2_1,
                             format = "pdf", 
