--- a/vignettes/mCP_tutorial_Humans_samples.Rmd
+++ b/vignettes/mCP_tutorial_Humans_samples.Rmd
@@ -101,7 +101,7 @@ mCP_Hek_P2_1 <- mCP(corum_database = Corum_Humans_Database,
                           N_fractions = 35, 
                           specie = "hsapiens",
                           method_cor = "pearson",
-                          heatmap_seaborn = TRUE,
+                          network = TRUE,
                           format = "pdf", 
                           output_name = "m_CP_analysis",
                           filter = 0.81,
@@ -157,7 +157,7 @@ CL_hek_P2_1<- mcp_list(corum_database =  Corum_Humans_Database,
                        N_fractions = 35, 
                        specie = "hsapiens",
                        method_cor = "pearson",
-                       heatmap_seaborn = TRUE)
+                       network = TRUE)
 ##### Run the output of mcp_list into the cpp_ploter function. 
 out_Hek_P2_1 <- cpp_plotter(complex_list = CL_hek_P2_1,
                             format = "pdf", 
